--- a/overrides/main.html
+++ b/overrides/main.html
@@ -2,7 +2,7 @@
 
 {% block announce %}
 For updates follow <strong>@ZachTheSplunker</strong> on
-<a href="https://fosstodon.org/@ZachTheSplunker" target="_blank">
+<a rel="me" href="https://fosstodon.org/@ZachTheSplunker" target="_blank">
     <span class="twemoji mastodon">
         {% include ".icons/fontawesome/brands/mastodon.svg" %}
     </span>
